--- a/Nosotros/nosotros.css
+++ b/Nosotros/nosotros.css
@@ -58,12 +58,12 @@ nav li {
     transition: 0.2s all ease-in-out;
 }
 
-nav li:nth-child(2){
+nav li:nth-child(3){
     background-color: #F4B841;
     width: 80px;
 }
 
-nav li:nth-child(2):hover {
+nav li:nth-child(3):hover {
     background-color: #d69d2a;
 }
 
@@ -76,7 +76,7 @@ nav li > a:hover {
     font-weight: bolder;
 }
 
-nav li:nth-child(2) > a{
+nav li:nth-child(3) > a{
     color: black;
 }
 
@@ -126,7 +126,7 @@ nav li:nth-child(2) > a{
     color: light-dark(var(--light-color), var(--dark-color));
 }
 
-.dynamic-navbar > input:checked ~ ul > li:nth-child(2) > a {
+.dynamic-navbar > input:checked ~ ul > li:nth-child(3) > a {
     color: black;
 }
 
@@ -137,7 +137,7 @@ nav li:nth-child(2) > a{
     border-radius: 50% 0 0 50%;
 }
 
-.dynamic-navbar > ul > li:nth-child(2){
+.dynamic-navbar > ul > li:nth-child(3){
     width: calc(100% - 25px);
 }
 
@@ -173,87 +173,25 @@ main {
     border-radius: 50px 50px 0 0;
 }
 
-/*********** Productos efecto Carta ***********/
-.container {
-    display: flex;
-    justify-content: space-between;
+.conocenos {
     width: 70%;
-    flex-wrap: wrap;
-}
-
-.card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-    height: 320px;
     margin-top: 20px;
-    perspective: 1000px; /* Efecto 3D */
 }
 
-.card-inner {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transform-style: preserve-3d;
-    transition: transform 0.6s ease;
+.nuestraMision {
+    width: 70%;
 }
 
-.card:focus-within .card-inner {
-    transform: rotateY(180deg);
-}
-
-.card-front,
-.card-back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden;
+#textoImagen {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    background: #333;
-    color: white;
-    border-radius: 10px 10px 0 0;
 }
 
-.card-back {
-    transform: rotateY(180deg);
-    background: #555;
-}
-
-.card-back > p {
-    font-size: 15px;
-    max-width: 90%;
-}
-
-.card-back > a {
-    color: light-dark(var(--dark-color), var(--light-color));
-    font-style: italic;
-}
-
-.click-area {
-    position: absolute;
-    width: 300px;
-    height: 290px;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.card > span {
-    width: 290px;
-    padding: 5px;
-    background-color: light-dark(var(--dark-secondary), var(--light-secondary));
-    border-radius: 0 0 10px 10px;
-    color: light-dark(var(--dark-color), var(--light-color));
-}
-
-.card > span a {
-    float: right;
-    color: light-dark(var(--dark-color), var(--light-color));
-    margin-right: 10px;
+#textoImagen > img {
+    margin-right: 20px;
+    object-fit: contain;
+    filter: drop-shadow(
+        0 0 10px rgba(0, 0, 0, .8)
+    );
 }
 
 /********************** Divisor de contenidos **********************/
@@ -316,10 +254,6 @@ footer > iframe {
 
     .default-navbar {
         display: none;
-    }
-
-    .container {
-        justify-content: center;
     }
 
     footer {
