--- a/Pago/pago.css
+++ b/Pago/pago.css
@@ -18,11 +18,12 @@
 }
 
 html {
-    height: 100%;
+    height: 100vh;
+    padding-bottom: 60px;
 }
 
 body {
-    height: 100%;
+    height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/ivy.png");
     background-position: top;
     background-repeat: no-repeat;
@@ -47,6 +48,7 @@ main {
     display: flex;
     align-items: center;
     flex-direction: column;
+    height: 100vh;
 }
 
 .persPedido {
@@ -228,7 +230,7 @@ input[type="checkbox"]:checked, input[type="radio"]:checked {
 }
 
 /*********** Funcion Label ***********/
-.formulario input:focus ~ label, input:not(:placeholder-shown) ~ label{
+.formulario input:focus ~ label, input:valid ~ label{
     top: -8px;
     font-size: 12px;
 }
