--- a/Cuenta/cuenta.css
+++ b/Cuenta/cuenta.css
@@ -242,7 +242,7 @@ main {
     top: 50%;
     left: 35px;
     transform: translateY(-50%);
-    background: light-dark(#f9f9f9, var(--dark-secondary));
+    background: light-dark(var(--light-secondary), var(--dark-secondary));
     padding: 0 5px;
     transition: 0.2s ease-in-out;
     font-size: 14px;
@@ -253,7 +253,7 @@ main {
 .form input[type="email"], input[type="password"] {
     padding: 12px;
     width: 80%;
-    border: 1px solid #ccc;
+    border: 1px solid #b6b6b6;
     border-radius: 5px;
     font-size: 14px;
     outline: none;
@@ -273,7 +273,7 @@ main {
     width: 50%;
     padding: 12px;
     margin-top: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #b6b6b6;
     border-radius: 5px;
     font-size: 16px;
     text-align: center;
