--- a/Pago/pago.css
+++ b/Pago/pago.css
@@ -178,7 +178,7 @@ main {
     top: 50%;
     left: 40px;
     transform: translateY(-50%);
-    background: light-dark(#f9f9f9, var(--dark-secondary));
+    background: light-dark(var(--light-secondary), var(--dark-secondary));
     padding: 0 5px;
     transition: 0.2s ease-in-out;
     font-size: 14px;
@@ -193,7 +193,7 @@ main {
 .formulario input[type="text"] {
     padding: 12px;
     width: 80%;
-    border: 1px solid #ccc;
+    border: 1px solid #b6b6b6;
     border-radius: 5px;
     font-size: 14px;
     outline: none;
@@ -204,7 +204,7 @@ input[type="checkbox"] {
     appearance: none;
     width: 2rem;
     height: 2rem;
-    border: 1px solid #ccc;
+    border: 1px solid #b6b6b6;
     border-radius: 5px;
     cursor: pointer;
     margin: 0;
@@ -216,7 +216,7 @@ input[type="radio"]{
     appearance: none;
     width: 2rem;
     height: 2rem;
-    border: 1px solid #ccc;
+    border: 1px solid #b6b6b6;
     border-radius: 50%;
     transition: background-color 0.2s ease-in;
 }
@@ -244,7 +244,7 @@ input[type="checkbox"]:checked, input[type="radio"]:checked {
     border-radius: 5px;
     font-size: 16px;
     text-align: center;
-    color: light-dark(var(--dark-color), var(--light-color));
+    color: black;
     font-weight: bolder;
     background-color: #F4B841;
     outline: none;
